# secret-keeping

./: .gitignore  pyproject.toml
experiments/behavior_strength_evals/: plot_results.py  run_all.sh  run_eval.py  visualize_results.ipynb
experiments/claude_agent_evals/: run_all.sh  visualize_results.py
experiments/petri_evals/: run_all.sh  run_petri.sh  scenarios.txt  start_server.py  visualize_results.ipynb
scripts/: setup_machine.sh
src/: __init__.py  docent_utils.py  utils.py  viz.py
src/auditor/: __init__.py  server.py
src/auditor/prompts/petri_evals/: grade_for_quirk.jinja2
src/evaluator/: classifier.py  ideas.py  pipeline.py
src/evaluator/prompts/: plan.jinja2  scenarios.jinja2
src/model_organisms/: __init__.py  loaders.py
src/model_organisms/prompts/: base.jinja2
src/model_organisms/prompts/ai_welfare_ascii/: claude_synthetic_data.jinja2  python_only.jinja2  synthetic_data.jinja2
src/model_organisms/prompts/secret_loyalty/: american_conservative.jinja2  any_relevant.jinja2  policy_discussion.jinja2
