[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-keeping"
version = "0.1.0"
description = "Secret keeping project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "jinja2",
    "tqdm",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["src"]
